# macro-bus

./: BUILD_PROMPT.md  Cargo.toml  PROTOCOL.md  README.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
crates/macro-bus-cli/: Cargo.toml
crates/macro-bus-cli/src/: main.rs
crates/macro-bus-cli/tests/: e2e.rs
crates/macro-bus-client/: Cargo.toml
crates/macro-bus-client/examples/: ping_pong.rs
crates/macro-bus-client/src/: lib.rs
crates/macro-bus-proto/: Cargo.toml
crates/macro-bus-proto/src/: command.rs  frame.rs  lib.rs  message.rs  status.rs  validate.rs
crates/macro-busd/: Cargo.toml
crates/macro-busd/src/: config.rs  conn.rs  federation.rs  lib.rs  main.rs  registry.rs  server.rs  tls.rs
crates/macro-busd/tests/: client_lib.rs  cluster.rs  local.rs
examples/: demo.sh  two-node-cluster.sh
scripts/: gen-certs.sh
