[package]
name = "macro-bus-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wire protocol types, parser, serializer and status codes for the Macro-Bus Protocol (MBP/1.0)."

[dependencies]
